@@ -1,3 +1,4 @@
+* Add support for expand, height and width attributes
 * Add drag & drop support on attachment button
 
 Version 5.0.0 - 2018-10-01
